# hedwig

./: .air.toml  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Justfile  MTA_STS.md  PLAN.md  README.md  changelog.tpl  config.example.huml  config.example.toml  install.sh  rlsr.yml  send_email.py
.claude/skills/verify/: SKILL.md
.github/workflows/: docker.yml  release.yml
dev/: Corefile  Dockerfile.dev  config.fs.toml  config.sqlite.toml  config.test-throttle.toml  config.toml  docker-compose.test-throttle.yml  docker-compose.yml  generate-certs.sh
dev/fake-mta/: throttle.py
docs/: CONFIGURATION.md  PRODUCTION_HARDENING.md  package.json
docs/plans/: 2026-03-28-mta-sts.md  2026-03-29-sqlite-storage.md  2026-05-07-outbound-deliverability.md
docs/specs/: 2026-03-29-sqlite-storage-design.md
docs/src/components/: Footer.astro  Nav.astro
docs/src/layouts/: BaseLayout.astro  DocLayout.astro
docs/src/pages/: configuration.md  dkim.md  domain-filtering.md  health-checks.md  index.astro  installation.md  introduction.md  logging.md  metrics.md  mta-sts.md  quickstart.md  rate-limiting.md  storage.md
docs/src/pages/reference/: architecture.md  environment-variables.md  example-configuration.md  huml-example.md
docs/src/styles/: global.css
docs/superpowers/specs/: 2026-03-28-mta-sts-design.md
smtp/: Cargo.toml
smtp-server/: ARCHITECTURE.md  Cargo.toml
smtp-server/src/: callbacks.rs  config.rs  health.rs  main.rs  metrics.rs  migrate.rs  queue_cli.rs
smtp-server/src/dkim/: mod.rs
smtp-server/src/filters/: domain_filter.rs  mod.rs
smtp-server/src/logqueue/: dispatcher.rs  mod.rs  record.rs  segment.rs  shard.rs  spool.rs  state.rs  writer.rs
smtp-server/src/mta_sts/: cache.rs  fetcher.rs  mod.rs  policy.rs  refresher.rs
smtp-server/src/storage/: fs_storage.rs  mod.rs  sqlite_storage.rs
smtp-server/src/worker/: deferred_worker.rs  log_worker.rs  mod.rs  pool.rs  rate_limiter.rs  worker.rs
smtp/src/: lib.rs  parser.rs
src/: main.rs
