[package]
name = "smtp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
miette = { version = "7.2.0", features = ["fancy"] }
nom = "7.1.3"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["net", "io-util", "rt-multi-thread", "macros", "fs", "io-std"] }
winnow = "0.6.20"
