[package]
name = "smtp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
smtp = { path = "../smtp" }
miette = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
mail-parser = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
camino = "1.1.9"
ulid = "1.1.3"
config = { version = "0.14.0", default-features = false, features = [
    "async",
    "toml",
] }
async-channel = "2.3.1"
futures = "0.3.30"
async-stream = "0.3.6"
email-address-parser = "2.0.0"
deadpool = "0.12.1"
hickory-resolver = "0.24.1"
mail-send = "0.4.9"
tokio-rustls = { version = "0.26.0", features = [
    "ring",
], default-features = false }
subtle = "2.6.1"
tempfile = "3.13.0"
