[package]
name = "smtp"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
miette = { workspace = true }
nom = "8.0.0"
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tokio-rustls = "0.26.1"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2.0"
bytes = "1.10.0"
memchr = "2.7.4"
